Sometimes I wish I was just a cloud, floating along